# gatorgrader

./: .all-contributorsrc  .appveyor.yml  .codacy.yml  .coveragerc  .gitattributes  .gitignore  .gitmessage  .mdlrc  .pylintrc  .style.yapf  .tasks.py  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  LintingChecks.md  Pipfile  README.md  bandit.yml  codecov.yml  gatorgrader.py  gatorgrader_comments.py  gatorgrader_entities.py  gatorgrader_exit.py  gatorgrader_files.py  gatorgrader_fragments.py  gatorgrader_invoke.py  gatorgrader_repository.py  gatorgrader_run.py  gatorgrader_util.py  pyproject.toml  pytest.cov  pytest.ini  pythonPipenvInstallation.md  requirements.txt  setup.cfg  tox.ini  workflow.md
.github/: gatorgraderlogo.psd  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: main.yml  publish.yml  tag_publish.yml  test_publish.yml
.ipynb_checkpoints/: gatorgrader-checkpoint.py
.pytest_cache/v/cache/: lastfailed
courses/all/tests/: conftest.py  test_gatorgrader_submit_files.py
gator/: __init__.py  arguments.py  checkers.py  comments.py  constants.py  description.py  display.py  entities.py  exceptions.py  exit.py  files.py  fragments.py  invoke.py  issues.py  leave.py  markdown.py  markdown_checking.py  orchestrate.py  report.py  repository.py  run.py  spellcheck.py  spelling.py  util.py
gator/checks/: check_ConfirmFileExists.py  check_CountCommandOutput.py  check_CountCommits.py  check_CountFileLines.py  check_CountFileParagraphs.py  check_CountFileWords.py  check_CountMarkdownTags.py  check_CountMultipleLineComments.py  check_CountParagraphWords.py  check_CountSingleLineComments.py  check_ExecuteCommand.py  check_ExecuteFailingCommand.py  check_ExecutesCommand.py  check_FindFile.py  check_ListChecks.py  check_MatchCommandFragment.py  check_MatchCommandRegex.py  check_MatchFileFragment.py  check_MatchFileRegex.py  check_Spellcheck.py  check_commits.py
internal/java/: Sample.java  example.tex
scripts/: cover-win.bat  cover.bat  cover.sh  ensure.py  lint.bat  lint.sh  tasks.py  test.bat  test.sh
scripts/.ipynb_checkpoints/: ensure-checkpoint.py
tests/: conftest.py  test_arguments.py  test_checkers.py  test_comments.py  test_constants.py  test_description.py  test_display.py  test_files.py  test_fragments.py  test_gator.py  test_gatorgrader.py  test_gatorgrader_arguments.py  test_gatorgrader_comments.py  test_gatorgrader_display.py  test_gatorgrader_exit.py  test_gatorgrader_files.py  test_gatorgrader_fragments.py  test_gatorgrader_leave.py  test_gatorgrader_repository.py  test_gatorgrader_run.py  test_gatorgrader_util.py  test_gatorgrader_utils.py  test_invoke.py  test_issues.py  test_leave.py  test_markdown.py  test_orchestrate.py  test_report.py  test_repository.py  test_run.py  test_spelling.py  test_util.py
tests/checks/: address.py  test_Check_spellcheck.py  test_check_ConfirmFileExists.py  test_check_CountCommandOutput.py  test_check_CountCommits.py  test_check_CountFileLines.py  test_check_CountFileParagraphs.py  test_check_CountFileWords.py  test_check_CountMarkdownTags.py  test_check_CountMultipleLineComments.py  test_check_CountParagraphWords.py  test_check_CountSingleLineComments.py  test_check_ExecuteCommand.py  test_check_ExecuteFailingCommand.py  test_check_ExecutesCommand.py  test_check_FindFile.py  test_check_ListChecks.py  test_check_MatchCommandFragment.py  test_check_MatchCommandRegex.py  test_check_MatchFileFragment.py  test_check_MatchFileRegex.py
