[project]
name = "gatorgrader"
version = "1.1.2"
description = "Automated Grading Tool that Checks the Work of Writers and Programmers"
authors = [
    { name = "Gregory Kapfhammer", email = "gkapfham@allegheny.edu" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.7.2,<4.0"
dependencies = [
    "GitPython>=3.1.27,<4.0",
    "requests>=2.28.1,<3.0",
    "commonmark>=0.9.1,<0.10",
    "num2words>=0.5.10,<0.6",
    "pluginbase>=1.0.1,<2.0",
    "typer>=0.19.1",
]

[project.optional-dependencies]
dev = [
    "pylint>=2.14.5,<3.0",
    "black>=22.6.0,<23.0",
    "pytest>=7.1.2,<8.0",
    "codecov>=2.1.12,<3.0",
    "flake8>=4.0.1,<5.0",
    "pytest-cov>=3.0.0,<4.0",
    "pytest-sugar>=0.9.5,<0.10",
    "bandit>=1.7.4,<2.0",
    "pydocstyle>=6.1.1,<7.0",
    "radon>=5.1.0,<6.0",
    "xenon>=0.9.0,<0.10",
    "snoop>=0.4.1,<0.5",
    "taskipy>=1.10.2,<2.0",
    "toml>=0.10.2,<0.11",
]

[project.scripts]
gatorgrader = "gatorgrader:main"

[project.urls]
Homepage = "https://github.com/GatorEducator/gatorgrader"
Repository = "https://github.com/GatorEducator/gatorgrader"
Documentation = "https://github.com/GatorEducator/gatorgrader"
"Bug Tracker" = "https://github.com/GatorEducator/gatorgrader/issues"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pylint>=2.14.5,<3.0",
    "black>=22.6.0,<23.0",
    "pytest>=7.1.2,<8.0",
    "codecov>=2.1.12,<3.0",
    "flake8>=4.0.1,<5.0",
    "pytest-cov>=3.0.0,<4.0",
    "pytest-sugar>=0.9.5,<0.10",
    "bandit>=1.7.4,<2.0",
    "pydocstyle>=6.1.1,<7.0",
    "radon>=5.1.0,<6.0",
    "xenon>=0.9.0,<0.10",
    "snoop>=0.4.1,<0.5",
    "taskipy>=1.10.2,<2.0",
    "toml>=0.10.2,<0.11",
    "ruff>=0.15.21",
]

[tool.taskipy.tasks]
test = "./scripts/test.sh"
cover = "./scripts/cover.sh"
lint = "./scripts/lint.sh"
test-win = 'scripts\\test.bat'
cover-win = 'scripts\\cover.bat'
lint-win = 'scripts\\lint.bat'

[tool.ruff]
line-length = 79
lint.ignore = [
    "D203", # do not check blank lines
    "D213", # do not check multi-line docstrings
    "E501", # do not check line length
]
lint.select = [
    "E",    # pycodestyle
    "D",    # pydocstyle
    "I",    # isort
    "F",    # pyflakes
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific
    "W",    # pycodestyle warnings
    "T201"  # flake8-print
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gator", "gatorgrader.py"]
