[project]
name = "gatorgrader"
version = "1.1.3"
description = "Automated Grading Tool that Checks the Work of Writers and Programmers"
authors = [
    { name = "Gregory Kapfhammer", email = "gkapfham@allegheny.edu" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "GitPython>=3.1.27,<4.0",
    "requests>=2.28.1,<3.0",
    "commonmark>=0.9.1,<0.10",
    "num2words>=0.5.10,<0.6",
    "pluginbase>=1.0.1,<2.0",
    "typer>=0.19.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2,<8.0",
    "pytest-cov>=3.0.0,<4.0",
    "pytest-sugar>=0.9.5,<0.10",
    "bandit>=1.7.4,<2.0",
    "radon>=5.1.0,<6.0",
    "xenon>=0.9.0,<0.10",
    "snoop>=0.4.1,<0.5",
    "taskipy>=1.10.2,<2.0",
    "toml>=0.10.2,<0.11",
]

[project.scripts]
gatorgrader = "gatorgrader:main"

[project.urls]
Homepage = "https://github.com/GatorEducator/gatorgrader"
Repository = "https://github.com/GatorEducator/gatorgrader"
Documentation = "https://github.com/GatorEducator/gatorgrader"
"Bug Tracker" = "https://github.com/GatorEducator/gatorgrader/issues"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=7.1.2,<8.0",
    "pytest-sugar>=0.9.5,<0.10",
    "bandit>=1.7.4,<2.0",
    "radon>=5.1.0,<6.0",
    "xenon>=0.9.0,<0.10",
    "snoop>=0.4.1,<0.5",
    "taskipy>=1.10.2,<2.0",
    "toml>=0.10.2,<0.11",
    "ruff>=0.15.21",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=3.0.0",
]

[tool.taskipy.variables]
project = "gator"
files = "gator tests/*.py gatorgrader.py"
coveragefailunder = "99"

[tool.taskipy.tasks]
test = { cmd = "pytest -x", help = "Run the pytest test suite" }
cover = { cmd = "pytest -x --cov=gator --cov-fail-under={coveragefailunder} --cov-report=term-missing tests/", help = "Run the pytest test suite with coverage tracking", use_vars = true }
# Linting tasks run all tools sequentially -- taskipy runs deps in order
lint-ruff = { cmd = "ruff check {files}", help = "Check Python code with ruff", use_vars = true }
lint-ruff-format = { cmd = "ruff format --check {files}", help = "Check Python code formatting with ruff", use_vars = true }
lint-bandit = { cmd = "bandit -c bandit.yml -r gator/", help = "Check Python security with bandit" }
lint-radon-cc = { cmd = "radon cc {files}", help = "Check cyclomatic complexity with radon", use_vars = true }
lint-radon-mi = { cmd = "radon mi {files}", help = "Check maintainability index with radon", use_vars = true }
lint-xenon = { cmd = "xenon --max-absolute D --max-modules B --max-average A gator/", help = "Check code quality thresholds with xenon" }
lint = "uv run task lint-ruff && uv run task lint-ruff-format && uv run task lint-bandit && uv run task lint-radon-cc && uv run task lint-radon-mi && uv run task lint-xenon"

[tool.ruff]
line-length = 79
lint.ignore = [
    "D203", # do not check blank lines
    "D213", # do not check multi-line docstrings
    "E501", # do not check line length
]
lint.select = [
    "E",    # pycodestyle
    "D",    # pydocstyle
    "I",    # isort
    "F",    # pyflakes
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific
    "W",    # pycodestyle warnings
    "T201"  # flake8-print
]

# Magic numbers (PLR2004) are acceptable in test files
# where they improve readability over named constants
# - PLR2004: magic numbers are acceptable in tests for readability
# - RUF059: unused unpacked variables are intentional for clarity in tests
lint.per-file-ignores = {"tests/*.py" = ["PLR2004", "RUF059"]}

[tool.coverage.run]
source = ["gator"]
branch = true
omit = ["tests/*", "**/__init__.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gator", "gatorgrader.py"]
